--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -81,6 +81,11 @@ img {
 
 /*========END COMPONENTS========*/
 /*========START HEADER========*/
+
+.header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
 .logo {
   margin-right: 93px;
   font-family: var(--secondary-font-family);
@@ -138,16 +143,19 @@ img {
 /*========START HERO========*/
 .hero {
   background: #2f303a;
+  height: 600px;
 }
 
 .title {
+  padding-top: 200px;
+  padding-bottom: 280px;
+  padding-right: 452px;
+  padding-left: 452px;
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  /* or 136% */
-
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -156,6 +164,11 @@ img {
 }
 
 .hero-button {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
+  border-radius: 4px;
   font-family: var(--primary-font-family);
   font-style: normal;
   font-weight: bold;
