--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -249,6 +249,10 @@ img {
 /*========1 SECTION END========*/
 /*========2 SECTION START========*/
 
+.section-services {
+  padding-bottom: 94px;
+}
+
 .header-section {
   margin-bottom: 50px;
   font-family: var(--primary-font-family);
@@ -375,10 +379,6 @@ img {
 
 .projects-list-item:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
-}
-
-.projects-list-position {
-  padding-bottom: 20px;
 }
 
 .projects-img {
